# retail-demo

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  FIELD_NAMING_FIX_SUMMARY.md  IMPROVEMENTS.md  MAP.md  MODULARIZATION_SUMMARY.md  README.md  SECURITY.md  STATUS.md  mkdocs.yml  pyproject.toml  requirements-docs.in  requirements-docs.txt  requirements-test.in  requirements-test.txt  zensical.toml
0.9/: 404.html  (+1 more)
datagen/: .env.example  .gitignore  =6.88.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  CSV_EXPORT_REMOVAL_SUMMARY.md  EXPORT_MODELS_SUMMARY.md  HOURLY_TRACKER_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  MARKETING_COST_CONFIG_SUMMARY.md  MIGRATION_PHASE_3A_NOTES.md  MIGRATION_UTILITIES.md  MODULARIZATION_SUMMARY.md  PHASE_1B_SUMMARY.md  PHASE_3A_IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_NOTES.md  SECURITY_QUALITY_AUDIT_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_VALIDATION_REPORT.md  WRITERS_IMPLEMENTATION.md  add_async_methods.py  bandit_security_report.json  config.example.json  config.json  demo_marketing_costs.py  extract_modules.py  launch.sh  mkdocs.yml  pyproject.toml  quick_test_output.txt  requirements-dev.txt  requirements.txt  ruff_report.json  test_api_models_update.py  test_debug.py  test_file_manager.py  test_parallel.py  (+12 more)
datagen/.github/workflows/: type-check.yml
datagen/data/cache/: dashboard_stats.json
datagen/data/dictionaries/: .gitkeep  first_names.csv  geographies.csv  last_names.csv  product_brands.csv  product_companies.csv  product_tags.csv  products.csv  tax_rates.csv
datagen/data/master/: dc_inventory_snapshots.csv  distribution_centers.csv  geographies_master.csv  products_master.csv  stores.csv  trucks.csv
datagen/docs/: CONNECTION_STRING_VALIDATION.md  CREDENTIALS.md  EXPORT_API_MODELS.md  FACT_GENERATION.md  FLEXIBLE_VALIDATION.md  LOCAL_DATA.md  SECURITY_AUDIT_REPORT.md  STORE_PROFILES.md  STREAMING_API.md  STREAMING_OPERATIONS.md  STREAMING_SETUP.md  UPLOAD_DATA.md  VALIDATION.md  index.md  validation_queries.sql
datagen/docs/sql/: vw_all_orders.sql  vw_orders.sql
datagen/examples/: migrate_csv_to_sqlite.py
datagen/site/: 404.html  index.html  sitemap.xml
datagen/site/CREDENTIALS/: index.html
datagen/site/FACT_GENERATION/: index.html
datagen/site/LOCAL_DATA/: index.html
datagen/site/STORE_PROFILES/: index.html
datagen/site/STREAMING/: index.html
datagen/site/STREAMING_API/: index.html
datagen/site/STREAMING_OPERATIONS/: index.html
datagen/site/STREAMING_SETUP/: index.html
datagen/site/UPLOAD_DATA/: index.html
datagen/site/VALIDATION/: index.html
datagen/site/search/: search_index.json
datagen/src/retail_datagen/: main.py
datagen/static/css/: style.css
datagen/static/js/: main.js
datagen/static/omnichannel_sample/: allocations.csv  decision_trails.json  fulfillment_events.csv  inbound_shipments.csv  inventory_snapshots.csv  nodes.csv  orders.csv  quotes.jsonl
datagen/templates/: index.html  omnichannel_config.yaml
datagen/tests/: conftest.py  test_utils.py
datagen/tests/integration/: README_TEST_SUITE.md  TEST_COVERAGE_REPORT.md  __init__.py  test_credential_integration.py  test_customer_zone_changes_integration.py  test_end_to_end.py  test_export_endpoints.py  test_historical_generation_flow.py  test_marketing_generation_integration.py  test_master_generation_small.py  test_online_orders.py  test_payments_integration.py  test_progress_integration.py  test_promotions_integration.py  test_returns_cents_integration.py  test_store_ops_integration.py  test_task_status_endpoint.py
datagen/tests/unit/: EXPORT_TESTS_SUMMARY.md  TEST_DEPENDENCIES_PROGRESS_SUMMARY.md  test_balance_restoration.py  test_ble_marketing_patterns.py  test_brand_security.py  test_config.py  test_credential_utils.py  test_customer_zone_changes.py  test_db_reader.py  test_dependencies_progress.py  test_duckdb_engine_exceptions.py  test_duckdb_reader.py  test_export_service.py  test_fact_generator_exceptions.py  test_file_manager.py  test_flexible_validation.py  test_foot_traffic_logic.py  test_format_writers.py  test_hourly_progress_reporting.py  test_hourly_progress_tracker.py  test_issue_fixes.py  test_marketing_fixes.py  test_master_generator_helpers.py  test_models.py  test_notebook_env_validation.py  test_omnichannel_helpers.py  test_online_order_lifecycle.py  test_parallel_fix.py  test_payments_generation.py  test_pricing.py  test_progress_reporting.py  test_promotions_generation.py  test_rate_limit_ttl.py  test_reorders.py  test_retail_engine.py  test_returns_cents_calculation.py  test_router_constants.py  test_sourcedata.py  test_stockouts.py  test_store_ops.py  (+6 more)
datagen/tests/validation/: test_customer_geography.py  test_export_models.py  test_hourly_progress_api.py  test_marketing_cost_config.py  test_online_orders.py  test_pattern_fixes_unit.py  test_promotions.py  test_receipt_integrity.py  test_sensor_marketing_fixes.py  test_store_profiles.py  test_store_tax_rates.py  test_tax_implementation.py  test_truck_lifecycle.py
utility/: README.md  pyproject.toml  requirements-ci.txt  requirements-deploy.txt
utility/notebooks/: clickstream-generator.ipynb  setup-01-seed-dictionaries.ipynb  setup-02-generate-dimensions.ipynb  setup-03-generate-facts.ipynb  setup-04-build-gold.ipynb  setup-05-stream-events.ipynb  stream-events.ipynb
utility/notebooks/templates/: driver-02-dimensions.py  driver-03-facts.py  driver-04-gold.py  driver-05-stream.py  driver-06-clickstream.py  setup-01-seed-dictionaries.ipynb.py
utility/scripts/: build_notebooks.py  catalog_builder.py  convert_datagen_dictionaries.py  run_ci_shards.py
utility/scripts/catalogs/: grocery.py  hardware.py  luxury.py
utility/tests/: conftest.py  test_catalog_builder.py  test_ci_shards.py  test_cli_configure.py  test_cli_deploy.py  test_cli_entrypoint.py  test_cli_render.py  test_console.py  test_converted_dictionaries.py  test_dictionary_loader.py  test_dictionary_models.py  test_dictionary_ref.py  test_e2e_local.py  test_estimate.py  test_generation_config.py  test_gold_sources.py  test_inject.py  test_notebook_build.py
(+1658 files in other folders)
